<resources>
    <string name="app_name">易音科技</string>
    <string name="action_settings">Settings</string>
    <string name="password">Password</string>
    <string name="login">登录</string>
    <string name="email">Email</string>
    <string name="no_account_yet_create_one">您是教师？打开网站注册</string>
    <string name="loginteacher">教师家长端</string>
    <string name="loginstudent">学生客户端</string>
    <string name="folder">Guitar</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_1">首页</string>
    <string name="tab_2">录制</string>
    <string name="tab_3">写谱</string>
    <string name="tab_4">学生</string>
    <string name="tab_5">我的</string>
    <string name="chatStudentsName">李湘宁</string>
    <string name="no_account_yet_create_one2">想学吉他？点击这里注册</string>
    <string name="studentHadSignUpHint">已经有账户了？点击这里登录</string>
    <string name="description_define_in_xml">乐谱同步中</string>
    <string name="ANote">单个音符</string>
    <string name="slowMusic">乐曲慢弹</string>
    <string name="normalMusic">乐曲连弹</string>
    <string name="clean">清空</string>
    <string name="pause">暂停</string>
    <string name="stop">停止</string>
    <string name="GodMode">上帝模式</string>
</resources>
