<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    String[] menu_name_array = {"清空", "单个音符", "乐曲慢弹", "播放", "暂停", "停止"};
    <item
        android:id="@id/ANote"
        android:title="@string/ANote"/>
    <item
        android:id="@id/slowMusic"
        android:title="@string/slowMusic"/>
    <item
        android:id="@id/normalMusic"
        android:title="@string/normalMusic"/>
    <item
        android:id="@id/pause"
        android:title="@string/pause"/>
    <item
        android:id="@id/stop"
        android:title="@string/stop"/>
    <item
        android:id="@id/cleanAll"
        android:title="@string/clean"/>
    <item
        android:id="@id/godMode"
        android:title="@string/GodMode"/>
</menu>